--- a/views/admin/system-edit-account.ejs
+++ b/views/admin/system-edit-account.ejs
@@ -225,7 +225,7 @@
             </form>
           </div>
           <div class="main-details-profile">
-            <img id="img-admin" src="<%= loggedInAdmin.img %>" alt="Admin Profile" />
+            <img class="circle-img" id="img-admin" src="<%= loggedInAdmin.img %>" alt="Admin Profile" />
             <p><span><%= loggedInAdmin.name %></span></p>
             <button id="change-image">Change Profile Image</button>
             <br />
