--- a/public/admin/css/dashboard.css
+++ b/public/admin/css/dashboard.css
@@ -1,6 +1,23 @@
 .form {
   border-radius: 1.5rem;
-  /* border: .2rem solid; */
+}
+
+/* .header-user img {
+  height: 3rem;
+  width: 3rem;
+  object-fit: cover;
+  margin: 0 0.875rem 0 0.75rem;
+  background: var(--sidebar-color);
+  transition: all 0.5s ease;
+  border-radius: 50%;
+} */
+
+.profile-img {
+  width: 2.5rem; /* Set the width */
+  height: 2.5rem; /* Set the height */
+  border-radius: 50%; /* Makes the image circular */
+  object-fit: cover; /* Ensures the image covers the area without distortion */
+  margin: 0 0.875rem 0 0.75rem;
 }
 
 .first-main {
