changed bg color

--- a/public/admin/css/dashboard.css
+++ b/public/admin/css/dashboard.css
@@ -3,6 +3,10 @@
   /* border: .2rem solid; */
 }
 
+.main {
+  background-color: #faf2db;
+}
+
 .first-main {
   display: flex;
   flex-direction: row;
