--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -202,6 +202,12 @@
       </div>
       <main class="main">
         <div id="container-overlay">
+          <div class="title-container">
+            <div class="r">
+              <i class="bx bxs-dashboard"></i>
+              <h1 class="title">Dashboard</h1>
+            </div>
+          </div>
           <div class="first-main">
             <div class="main-column">
               <div class="form" id="election-settings">
