--- a/public/admin/css/index-admin.css
+++ b/public/admin/css/index-admin.css
@@ -187,6 +187,14 @@ h6 {
   width: 20%;
 } */
 
+.profile-img {
+  width: 2.5rem; /* Set the width */
+  height: 2.5rem; /* Set the height */
+  border-radius: 50%; /* Makes the image circular */
+  object-fit: cover; /* Ensures the image covers the area without distortion */
+  margin: 0 0.875rem 0 0.75rem;
+}
+
 /* CONTENT */
 .content {
   min-height: 0;
