--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -82,7 +82,7 @@
         <p><strong>End Date:</strong> <%= endDate %></p>
       </div>
       <div class="header-user">
-        <img src="<%= loggedInAdmin.img %>" alt="Admin Profile" class="profile-img" />
+        <img src="<%= loggedInAdmin.img %>" alt="Admin Profile" />
         <div class="admin-name"><%= loggedInAdmin.name %></div>
         <div class="dropdown" onclick="toggleDropdown()"></div>
         <div class="dropdown-menu">
