--- a/public/admin/css/index-admin.css
+++ b/public/admin/css/index-admin.css
@@ -616,7 +616,7 @@ h6 {
   padding-bottom: 3rem;
   padding-right: 5rem;
   padding-left: 2rem;
-  border: 3px solid black;
+  /* border: 3px solid black; */
 }
 
 .circle-img {
@@ -632,10 +632,13 @@ h6 {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
 .r i {
-  font-size: 5rem;
+  font-size: 2rem;
+  color: #480404;
 }
 
 .actions {
